@@ -124,7 +124,7 @@
 		<dependency>
 			<groupId>me.clip</groupId>
 			<artifactId>placeholderapi</artifactId>
-			<version>2.10.3</version>
+			<version>2.10.4</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
