@@ -17,3 +17,6 @@
 - Fix bone meals dupping issue when interacted with seeds
 - Should fixed issue when the JobsPrePaymentEvent getJob method always returns null
 - Fixed income dupping issue and repair action not work correctly.
+- Updated translations to the latest
+- Jobs toggles will not be saved from now instantly when get income
+- Added option to leave from job in jobs GUI.
